--- a/client/src/pages/texteditor/texteditor.css
+++ b/client/src/pages/texteditor/texteditor.css
@@ -4,8 +4,13 @@
 }
 
 .editor {
-  width: 800px;
   border: 1px solid #e1e1e1;
+  width: 800px;
+}
+
+.editor-focus {
+  width: 800px;
+  border: 1px solid #a1a1a1;
 }
 
 .preview {
