--- a/client/src/components/SubjectRecipient/SubjectRecipient.css
+++ b/client/src/components/SubjectRecipient/SubjectRecipient.css
@@ -16,3 +16,28 @@
 .subject-box button {
   margin: 3px 0 3px 0;
 }
+
+.Overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.75);
+}
+.Modal {
+  margin: auto;
+  position: absolute;
+  width: 900px;
+  top: 40px;
+  left: 40px;
+  right: 40px;
+  bottom: 40px;
+  border: 1px solid #ccc;
+  background: #fff;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+  border-radius: 4px;
+  outline: none;
+  padding: 20px;
+}
