--- a/client/src/pages/texteditor/texteditor.css
+++ b/client/src/pages/texteditor/texteditor.css
@@ -20,3 +20,25 @@
   border: 1px solid #aaa;
   word-wrap: break-word;
 }
+
+.style-blockquote {
+  display: flex;
+  justify-content: flex-start;
+  border-left: 5px solid #eee;
+  color: #666;
+  font-family: 'Hoefler Text', 'Georgia', serif;
+  font-style: italic;
+  margin: 16px 0;
+  padding: 10px 20px;
+}
+
+.align-left {
+  text-align: left;
+}
+
+.align-center {
+  text-align: center;
+}
+.align-right {
+  text-align: right;
+}
